# playground_api

./: .gitignore  Dockerfile  README.md  deploy.sh  install_deps.py  pyproject.toml  run.py
.github/workflows/: basic_cd_flow.yaml  basic_ci_flow.yaml  basic_deploy_flow.yaml
api/: __init__.py
api/modules/: __init__.py
api/modules/chat/: __init__.py  models.py
api/modules/face/: __init__.py  models.py
api/modules/ocr/: __init__.py  models.py
api/routes/: __init__.py  chat.py  face.py  ocr.py
api/utils/: __init__.py  general.py  inference.py
tests/: routes.py  test_face.py  test_ocr.py  test_run.py
